pamc/src/tests/sample_code/should_fail/multi_file/bind/use_identifier_as_is/src/mod.ph
mod nat;
use nat.Blat;

let plus = fun plus(-a: Blat, b: Blat): Blat {
    match a {
        .O => b,
        .S(a') => Blat.S(plus(a', b)),
    }
};
